--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@
 *.su
 *.idb
 *.pdb
+*.output
+testing.c
+test.c
 
 # Kernel Module Compile Results
 *.mod*
@@ -50,3 +53,9 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Lex and Yacc Files
+y.tab.c
+y.tab.h
+lex.yy.c
+
